@@ -1,8 +1,6 @@
 requires "IO::Socket" => "1.18";
 requires "IO::String" => "0";
 requires "Moo" => "1.000000";
-requires "Sub::Quote" => "0";
-requires "Sub::Util" => "1.40";
 requires "perl" => "v5.10.0";
 requires "strict" => "0";
 requires "warnings" => "0";
